2024-06-10T00:37:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9440695101 # 322
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-10
* notice: last 14d: unq all: 4 10
* notice: prev accum: outdated-unq outdated-all / unq all: 668 1139 / 680 1151
* notice: next accum: outdated-unq outdated-all / unq all: 670 1141 / 680 1151
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-26] / []

2024-06-09T00:39:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9432660367 # 321
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-09
* notice: last 14d: unq all: 4 11
* notice: prev accum: outdated-unq outdated-all / unq all: 667 1137 / 680 1151
* notice: next accum: outdated-unq outdated-all / unq all: 668 1139 / 680 1151
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [2024-05-25] / [2024-05-26]

2024-06-08T00:35:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9424740016 # 320
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-08
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 666 1136 / 680 1151
* notice: next accum: outdated-unq outdated-all / unq all: 667 1137 / 680 1151
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2024-05-24] / [2024-05-25]

2024-06-07T00:36:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9409748015 # 319