@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-10T00:37:01Z",
-  "count_outdated" : 1141,
-  "uniques_outdated" : 670,
+  "timestamp" : "2024-06-11T00:35:42Z",
+  "count_outdated" : 1142,
+  "uniques_outdated" : 671,
   "count" : 1151,
   "uniques" : 680,
   "clones" : [
-    {
-      "timestamp": "2024-05-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-28T00:00:00Z",
       "count": 1,
