@@ -1,12 +1,7 @@
 {
-  "count": 10,
+  "count": 9,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-05-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-28T00:00:00Z",
       "count": 1,
