@@ -1,3 +1,12 @@
+2024-06-11T00:35:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9457607452 # 323
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-11
+* notice: last 14d: unq all: 4 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 670 1141 / 680 1151
+* notice: next accum: outdated-unq outdated-all / unq all: 671 1142 / 680 1151
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-05-27] / []
+
 2024-06-10T00:37:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9440695101 # 322
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-10
